--- a/flask_todomvc/templates/game.html
+++ b/flask_todomvc/templates/game.html
@@ -4,10 +4,23 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>RPG Game</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='bower_components/todomvc-common/base.css') }}">
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='bower_components/todomvc-common/base.css') }}"> -->
+        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"> -->
+
+        <script src="bower_components/jquery/jquery.js"></script>
+        <script src="bower_components/underscore/underscore.js"></script>
+        <script src="bower_components/backbone/backbone.js"></script>
+        <script src="bower_components/backbone/backbone.localStorage.js"></script>
+        <script src="js/apps/game.js"></script>
     </head>
     <body>
-        Let's play a game!
+        <div id="game">
+            Loading Game...
+        </div>
+        <script>
+            $(document).ready(function(){
+                window.game_view = new GameView({el: $('#game')});
+            });
+        </script>
     </body>
 </html>
