--- a/flask_todomvc/templates/game.html
+++ b/flask_todomvc/templates/game.html
@@ -11,6 +11,8 @@
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
         <script src="bower_components/backbone/backbone.localStorage.js"></script>
+        <script src="bower_components/tweenjs/tween.js"></script>
+        <script src="bower_components/twojs/two.js"></script>
         <script src="js/apps/game_ui.js"></script>
         <script src="js/apps/game.js"></script>
     </head>
