moved some js files

--- a/flask_todomvc/templates/game.html
+++ b/flask_todomvc/templates/game.html
@@ -13,8 +13,8 @@
         <script src="bower_components/backbone/backbone.localStorage.js"></script>
         <script src="bower_components/tweenjs/tween.js"></script>
         <script src="bower_components/twojs/two.js"></script>
-        <script src="js/apps/game_ui.js"></script>
-        <script src="js/apps/game.js"></script>
+        <script src="js/game_ui.js"></script>
+        <script src="js/game.js"></script>
     </head>
     <body>
         <div id="game">
