--- a/flask_todomvc/templates/game.html
+++ b/flask_todomvc/templates/game.html
@@ -14,6 +14,7 @@
         <script src="bower_components/tweenjs/tween.js"></script>
         <script src="bower_components/twojs/two.js"></script>
         <script src="js/game_ui.js"></script>
+        <script src="js/game_visuals.js"></script>
         <script src="js/game.js"></script>
     </head>
     <body>
