TAB shows stats

--- a/flask_todomvc/templates/game.html
+++ b/flask_todomvc/templates/game.html
@@ -16,6 +16,10 @@
         <script src="js/game_ui.js"></script>
         <script src="js/game_visuals.js"></script>
         <script src="js/game.js"></script>
+
+        <style>
+            #game{position: absolute; z-index: 10;}
+        </style>
     </head>
     <body>
         <div id="game">
