--- a/flask_todomvc/templates/game.html
+++ b/flask_todomvc/templates/game.html
@@ -13,6 +13,7 @@
         <script src="bower_components/backbone/backbone.localStorage.js"></script>
         <script src="bower_components/easeljs/tween.js"></script>
         <script src="bower_components/twojs/two.js"></script>
+        <script src="bower_components/quo.js"></script>
         <script src="js/game_ui.js"></script>
         <script src="js/game_visuals.js"></script>
         <script src="js/game.js"></script>
