--- a/flask_todomvc/templates/game.html
+++ b/flask_todomvc/templates/game.html
@@ -7,6 +7,7 @@
         <!-- <link rel="stylesheet" href="{{ url_for('static', filename='bower_components/todomvc-common/base.css') }}"> -->
         <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"> -->
 
+        <link rel="stylesheet" href="css/game.css">
         <script src="bower_components/jquery/jquery.js"></script>
         <script src="bower_components/underscore/underscore.js"></script>
         <script src="bower_components/backbone/backbone.js"></script>
@@ -17,21 +18,6 @@
         <script src="js/game_ui.js"></script>
         <script src="js/game_visuals.js"></script>
         <script src="js/game.js"></script>
-
-        <style>
-            #game{position: absolute; z-index: 10;}
-            .game-question{
-                position: absolute;
-                z-index: 10;
-                display:block;
-                width: 400px;
-                height: 300px;
-                background:rgb(0,0,0);
-                margin: 100px 0 0 100px;
-                opacity: 0.8;
-                color: white;
-                text-align: center;}
-        </style>
     </head>
     <body>
         <div id="game">
